<resources>
    <string name="app_name">BriceAndroidERestaurant</string>
    <string name="entry_name">🌭Entrées</string>
    <string name="rest_name">Bienvenue au resto</string>
    <string name="main_name">🌮Plats</string>
    <string name="dessert_name">🍰Desserts</string>
    <string name="category_default">Category</string>
    <string name="logo_desc">Logo Uncle Sam</string>
    <string name="dish_name">Titre Produit</string>
    <string name="dish_price">Titre Prix</string>
    <string name="fake_title">Saumon</string>
    <string name="fake_price">10 €</string>
    <string name="fake_badge">0</string>
    <string name="panier">🛒</string>
    <string name="x">x</string>
    <string name="total_text">Total :</string>
    <string name="fake_quantity">10</string>
    <string name="equals">=</string>
    <string name="passer_ma_commande">Passer ma commande</string>
    <string name="commentaire_s">Indique un commentaire(s)</string>
    <string name="com">Commentaire(s) : %1$s</string>
    <string name="fake_com">Bien cuit stp le sang</string>
    <string name="title_activity_maps">Notre situation géographique</string>
    <string name="nous_rejoindre">nous rejoindre</string>
    <string name="nous_trouver">🗺 Nous trouver</string>
    <string name="lancer_scan">Lancer le scan BLE</string>
    <string name="scan_loading">Scan BLE en cours …</string>
    <string name="unknown_name">Unknown name</string>
    <string name="_00_00_00_00_00">00:00:00:00:00</string>
    <string name="superbledevice">SuperBleDevice</string>
    <string name="_93db">-93db</string>
    <string name="db">%1$d Db</string>
    <string name="euro">%1$s €</string>
    <string name="croix">❌</string>
    <string name="ble_device_disconnected">Deconnecté</string>
    <string name="ble_device_characteristic_read">Lecture</string>
    <string name="ble_device_characteristic_write">Ecrire</string>
    <string name="ble_device_characteristic_notify">Notifier</string>
    <string name="ble_device_write_characteristic_title">Ecrire la valeur</string>
    <string name="ble_device_write_characteristic_confirm">Valider</string>
    <string name="ble_device_write_characteristic_cancel">Annuler</string>
    <string name="type_chara">Type chara</string>
    <string name="ecrire">ecrire</string>
    <string name="lire">lire</string>
    <string name="notifier">notifier</string>
    <string name="uuid">uuid : df</string>
    <string name="proprietes">propriétés : sdr</string>
    <string name="valeur">valeur :</string>
    <string name="service">Artist</string>
    <string name="uuidService">uuid</string>
    <string name="ble_btn">📱 BLE</string>
    <string name="disconnected">Deconnecté</string>
    <string name="connected">Connecté</string>
    <string name="connecting">Connexion en cours</string>
    <string name="statut">Statut :</string>
    <string name="derouler">derouler</string>


</resources>